Bug 1724813 [wpt PR 29958] - MSE: Strengthen QuotaExceededError validation for fixing spec #288, a=testonly
Automatic update from web-platform-tests
MSE: Strengthen QuotaExceededError validation for fixing spec #288

This change strengthens the checks that when an appendBuffer()'s
internal steps are aborted due to QuotaExceededError exception within
the "prepare append algorithm", the rest of the appendBuffer()'s steps
are also aborted. Note that verifying the state of the implementations
internal "input buffer" is not included in this change due to
complexity of that verification.

See https://github.com/w3c/media-source/issues/288. This change will
help inform whether that issues' fix would be a breaking change for
implementations that report results on https://wpt.fyi

Change-Id: Iaba91eb739ca40d4633b15326871bd3635e16fbd
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3083226
Auto-Submit: Matthew Wolenetz <wolenetzchromium.org>
Commit-Queue: Will Cassella <cassewgoogle.com>
Reviewed-by: Will Cassella <cassewgoogle.com>
Cr-Commit-Position: refs/heads/master{#910333}

--

wpt-commits: 60bc5896a5ce5586303378fe7f92ff8c756970a2
wpt-pr: 29958

UltraBlame original commit: e8b9679bf605b40c391875432dfc319c5cf0fd8b

--- a/testing/web-platform/tests/media-source/mediasource-appendbuffer-quota-exceeded.html
+++ b/testing/web-platform/tests/media-source/mediasource-appendbuffer-quota-exceeded.html
@@ -123,7 +123,7 @@ manifestFilenameAudio
 =
 subType
 +
-"
+'
 /
 test
 -
@@ -138,7 +138,7 @@ a
 manifest
 .
 json
-"
+'
 ;
 /
 /
@@ -178,6 +178,24 @@ doAppendDataFunc
 onCaughtExceptionCallback
 )
 {
+assert_false
+(
+sourceBuffer
+.
+updating
+'
+updating
+should
+be
+false
+before
+attempting
+an
+append
+operation
+'
+)
+;
 /
 /
 We
@@ -194,24 +212,74 @@ be
 no
 gaps
 .
-assert_false
-(
+let
+sbLength
+=
 sourceBuffer
 .
 buffered
 .
 length
+;
+assert_false
+(
+sbLength
 >
 1
-"
+'
 unexpected
 gap
 in
 buffered
 ranges
 .
-"
+'
 )
+;
+let
+previousBufferedStart
+=
+sbLength
+=
+=
+0
+?
+-
+Infinity
+:
+sourceBuffer
+.
+buffered
+.
+start
+(
+0
+)
+;
+let
+previousBufferedEnd
+=
+sbLength
+=
+=
+0
+?
+-
+Infinity
+:
+sourceBuffer
+.
+buffered
+.
+end
+(
+0
+)
+;
+let
+appendSucceeded
+=
+true
 ;
 try
 {
@@ -228,9 +296,39 @@ ex
 onCaughtExceptionCallback
 (
 ex
+previousBufferedStart
+previousBufferedEnd
 )
 ;
+appendSucceeded
+=
+false
+;
 }
+if
+(
+appendSucceeded
+)
+{
+assert_true
+(
+sourceBuffer
+.
+updating
+'
+updating
+should
+be
+true
+if
+synchronous
+portion
+of
+appendBuffer
+succeeded
+'
+)
+;
 test
 .
 expectEvent
@@ -266,6 +364,7 @@ onCaughtExceptionCallback
 )
 ;
 }
+}
 mediasource_test
 (
 function
@@ -279,20 +378,20 @@ mediaElement
 .
 addEventListener
 (
-"
+'
 error
-"
+'
 test
 .
 unreached_func
 (
-"
+'
 Unexpected
+media
+element
+error
 event
 '
-error
-'
-"
 )
 )
 ;
@@ -348,6 +447,8 @@ dataAudio
 function
 (
 ex
+previousBufferedStart
+previousBufferedEnd
 )
 {
 /
@@ -363,10 +464,323 @@ QuotaExceededError
 '
 )
 ;
+/
+/
+Verify
+that
+the
+state
+looks
+like
+appendBuffer
+stops
+executing
+its
+steps
+if
+the
+prepare
+append
+/
+/
+algorithm
+aborts
+after
+throwing
+QuotaExceededError
+.
+assert_false
+(
+sourceBuffer
+.
+updating
+'
+updating
+should
+be
+false
+if
+appendBuffer
+throws
+QuotaExceededError
+'
+)
+;
+sourceBuffer
+.
+onupdatestart
+=
+test
+.
+unreached_func
+(
+'
+buffer
+append
+signalled
+by
+updatestart
+should
+not
+be
+in
+progress
+'
+)
+;
+sourceBuffer
+.
+onupdate
+=
+test
+.
+unreached_func
+(
+'
+buffer
+append
+signalled
+by
+update
+should
+not
+be
+in
+progress
+'
+)
+;
+sourceBuffer
+.
+onupdateend
+=
+test
+.
+unreached_func
+(
+'
+buffer
+append
+signalled
+by
+updateend
+should
+not
+be
+in
+progress
+'
+)
+;
+/
+/
+Ensure
+the
+async
+append
+was
+not
+actually
+run
+by
+letting
+their
+event
+handlers
+have
+some
+time
+before
+we
+proceed
+.
+test
+.
+step_timeout
+(
+function
+(
+)
+{
+/
+/
+At
+least
+the
+first
+doAppendDataFunc
+call
+shouldn
+'
+t
+throw
+QuotaExceededError
+unless
+the
+audio
+/
+/
+test
+media
+itself
+is
+too
+large
+for
+one
+append
+.
+If
+that
+'
+s
+the
+case
+then
+many
+other
+tests
+should
+/
+/
+fail
+and
+the
+choice
+of
+test
+media
+may
+need
+to
+be
+changed
+.
+assert_equals
+(
+sourceBuffer
+.
+buffered
+.
+length
+1
+'
+test
+expects
+precisely
+one
+buffered
+range
+here
+'
+)
+;
+assert_equals
+(
+sourceBuffer
+.
+buffered
+.
+start
+(
+0
+)
+previousBufferedStart
+'
+QuotaExceededError
+should
+not
+update
+buffered
+media
+'
+)
+;
+assert_equals
+(
+sourceBuffer
+.
+buffered
+.
+end
+(
+0
+)
+previousBufferedEnd
+'
+QuotaExceededError
+should
+not
+update
+buffered
+media
+'
+)
+;
+/
+/
+Note
+it
+'
+s
+difficult
+to
+verify
+that
+the
+user
+agent
+does
+not
+"
+Add
+|
+data
+|
+to
+the
+end
+of
+the
+|
+input
+buffer
+|
+"
+if
+/
+/
+the
+attempted
+appendBuffer
+(
+)
+of
+that
+|
+data
+|
+caused
+QuotaExceededError
+.
 test
 .
 done
 (
+)
+;
+}
+1000
+/
+*
+1
+second
+modifiable
+by
+harness
+multiplier
+*
+/
 )
 ;
 }
