Bug 1725093 [wpt PR 29982] - [TablesNG] Fix rowspan cell height distribution over percentage rows, a=testonly
Automatic update from web-platform-tests
[TablesNG] Fix rowspan cell height distribution over percentage rows

Bug: when rowspanned cell distributed its height over rows that were
all percentage sized, no height would be distributed.

The problem was that when percentage resolution block size is indefinite,
percentage rows were not treated as percentage rows.
They were also not treated as empty rows either.

Solution: treat percentage rows as empty rows when percentage resolutions
size is indefinite.

Bug: 1237879
Change-Id: I775b5ee5a0bdd7b8ec90f23d49642a3ba90a468b
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3088159
Reviewed-by: Ian Kilpatrick <ikilpatrickchromium.org>
Commit-Queue: Aleks Totic <atoticchromium.org>
Cr-Commit-Position: refs/heads/master{#910971}

--

wpt-commits: 69528a9cb7488f69aee19f2e2f5ce685c03c72f4
wpt-pr: 29982

UltraBlame original commit: 8c90f6db1931df853fd40cba997fa1dd3e65a112

--- a/testing/web-platform/tests/css/css-tables/tentative/rowspan-height-redistribution.html
+++ b/testing/web-platform/tests/css/css-tables/tentative/rowspan-height-redistribution.html
@@ -4739,6 +4739,148 @@ tr
 table
 >
 <
+p
+class
+=
+"
+testdesc
+"
+>
+Distribution
+of
+rowspan
+over
+percentage
+rows
+Percentage
+rows
+are
+considered
+empty
+if
+they
+cannot
+resolve
+<
+/
+p
+>
+<
+table
+>
+<
+tbody
+>
+<
+tr
+style
+=
+"
+height
+:
+20
+%
+"
+>
+<
+td
+rowspan
+=
+3
+>
+<
+div
+style
+=
+"
+height
+:
+100px
+;
+width
+:
+100px
+"
+>
+<
+/
+div
+>
+<
+/
+td
+>
+<
+td
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+style
+=
+"
+height
+:
+30
+%
+"
+>
+<
+td
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+data
+-
+expected
+-
+height
+=
+100
+style
+=
+"
+height
+:
+50
+%
+"
+>
+<
+td
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+/
+tbody
+>
+<
+/
+table
+>
+<
 /
 main
 >
