Bug 1724529 [wpt PR 29935] - Support multiple calls to respondWith() for a single AppHistoryNavigateEvent, a=testonly
Automatic update from web-platform-tests
Support multiple calls to respondWith() for a single AppHistoryNavigateEvent

Fixed: 1221280
Change-Id: I4d3b2d9baf905da2b4f422f7e2a35a0f92e37c6c
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3077796
Commit-Queue: Domenic Denicola <domenicchromium.org>
Auto-Submit: Nate Chapin <japhetchromium.org>
Reviewed-by: Domenic Denicola <domenicchromium.org>
Cr-Commit-Position: refs/heads/master{#911388}

--

wpt-commits: 7eb7372a613fb3a4a7d4160d8292ac2b95b29864
wpt-pr: 29935

UltraBlame original commit: 47c8ab4746bdf1aac4b27f934cd319dd4d09a8e6

--- a/testing/web-platform/tests/app-history/navigate-event/respondWith-multiple-times.html
+++ b/testing/web-platform/tests/app-history/navigate-event/respondWith-multiple-times.html
@@ -40,67 +40,208 @@ script
 <
 script
 >
-async_test
+promise_test
 (
+async
 t
 =
 >
 {
+let
+p1_resolved
+=
+false
+;
+let
+p2_resolved
+=
+false
+;
+let
+p3_resolved
+=
+false
+;
 appHistory
 .
 onnavigate
 =
 t
 .
-step_func_done
+step_func
 (
 e
 =
 >
 {
-e
-.
-respondWith
-(
+let
+p1
+=
 Promise
 .
 resolve
 (
 )
-)
-;
-assert_throws_dom
+.
+then
 (
-"
-InvalidStateError
-"
+t
+.
+step_func
+(
 (
 )
 =
 >
+{
+assert_false
+(
+p2_resolved
+)
+;
+assert_false
+(
+p3_resolved
+)
+;
+p1_resolved
+=
+true
+;
+}
+)
+)
+;
+let
+p2
+=
+new
+Promise
+(
+resolve
+=
+>
+t
+.
+step_timeout
+(
+resolve
+1
+)
+)
+.
+then
+(
+t
+.
+step_func
+(
+(
+)
+=
+>
+{
+assert_true
+(
+p1_resolved
+)
+;
+assert_false
+(
+p3_resolved
+)
+;
+p2_resolved
+=
+true
+;
+}
+)
+)
+;
+let
+p3
+=
+new
+Promise
+(
+resolve
+=
+>
+t
+.
+step_timeout
+(
+resolve
+1
+)
+)
+.
+then
+(
+t
+.
+step_func
+(
+(
+)
+=
+>
+{
+assert_true
+(
+p1_resolved
+)
+;
+assert_true
+(
+p2_resolved
+)
+;
+p3_resolved
+=
+true
+;
+}
+)
+)
+;
 e
 .
 respondWith
 (
-Promise
+p1
+)
+;
+e
 .
-resolve
+respondWith
 (
+p2
 )
-)
+;
+e
+.
+respondWith
+(
+p3
 )
 ;
 }
 )
 ;
-location
-.
-href
+let
+promise
 =
+appHistory
+.
+navigate
+(
 "
 #
 1
 "
+)
 ;
 assert_equals
 (
@@ -108,20 +249,66 @@ location
 .
 hash
 "
+#
+1
 "
+)
+;
+assert_false
+(
+p1_resolved
+)
+;
+assert_false
+(
+p2_resolved
+)
+;
+assert_false
+(
+p3_resolved
+)
+;
+await
+promise
+;
+assert_true
+(
+p1_resolved
+)
+;
+assert_true
+(
+p2_resolved
+)
+;
+assert_true
+(
+p3_resolved
 )
 ;
 }
 "
+appHistory
+.
+navigate
+(
+)
+returns
+a
+promise
+that
+awaits
+all
+promises
+if
 AppHistoryNavigateEvent
 .
 respondWith
-throws
-if
-invoked
-more
-than
-once
+is
+called
+multiple
+times
 "
 )
 ;
