--- a/testing/web-platform/tests/app-history/navigate/navigate-respondWith.html
+++ b/testing/web-platform/tests/app-history/navigate/navigate-respondWith.html
@@ -102,11 +102,16 @@ promise
 returned_promise
 )
 ;
-assert_equals
-(
-promise_value
+let
+result
+=
 await
 returned_promise
+;
+assert_equals
+(
+result
+undefined
 )
 ;
 }
