Bug 1725287 [wpt PR 30002] - Highlight API: Invalidate markers' nodes in prepaint phase, a=testonly
Automatic update from web-platform-tests
Highlight API: Invalidate markers' nodes in prepaint phase

Move HighlightRegistry::ValidateHighlightMarkers calls to prepaint phase
so the nodes affected by the markers added/removed are invalidated and
then repainted in the paint phase of this lifecycle.

Also make tests wait until callback is executed.

Bug: 1238845
Change-Id: I998af8632ba21c7c504c99290a3424be7537c569
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3088068
Reviewed-by: Stefan Zager <szagerchromium.org>
Reviewed-by: Dan Clark <daniecmicrosoft.com>
Commit-Queue: Fernando Fiori <ffiorimicrosoft.com>
Cr-Commit-Position: refs/heads/master{#911572}

--

wpt-commits: 071d76fd176f11bc41afba153c2e1c0f8bec4028
wpt-pr: 30002

UltraBlame original commit: f4956920a8c6a7422098c956c82ca3c0c5f6e6fb

--- a/testing/web-platform/tests/css/css-highlight-api/painting/custom-highlight-painting-invalidation-001.html
+++ b/testing/web-platform/tests/css/css-highlight-api/painting/custom-highlight-painting-invalidation-001.html
@@ -4,6 +4,16 @@ DOCTYPE
 html
 >
 <
+html
+class
+=
+"
+reftest
+-
+wait
+"
+>
+<
 meta
 charset
 =
@@ -100,6 +110,30 @@ repainted
 "
 >
 <
+script
+src
+=
+"
+resources
+/
+run
+-
+after
+-
+layout
+-
+and
+-
+paint
+.
+js
+"
+>
+<
+/
+script
+>
+<
 style
 >
 :
@@ -194,14 +228,7 @@ registering
 the
 Highlight
 .
-requestAnimationFrame
-(
-(
-)
-=
->
-{
-requestAnimationFrame
+runAfterLayoutAndPaint
 (
 (
 )
@@ -226,7 +253,15 @@ r
 )
 )
 ;
-}
+document
+.
+documentElement
+.
+removeAttribute
+(
+"
+class
+"
 )
 ;
 }
@@ -235,4 +270,8 @@ r
 <
 /
 script
+>
+<
+/
+html
 >
