--- a/testing/web-platform/tests/css/css-highlight-api/painting/custom-highlight-painting-invalidation-002.html
+++ b/testing/web-platform/tests/css/css-highlight-api/painting/custom-highlight-painting-invalidation-002.html
@@ -4,6 +4,16 @@ DOCTYPE
 html
 >
 <
+html
+class
+=
+"
+reftest
+-
+wait
+"
+>
+<
 meta
 charset
 =
@@ -102,6 +112,30 @@ repainted
 after
 deletion
 "
+>
+<
+script
+src
+=
+"
+resources
+/
+run
+-
+after
+-
+layout
+-
+and
+-
+paint
+.
+js
+"
+>
+<
+/
+script
 >
 <
 style
@@ -216,14 +250,7 @@ deleting
 the
 Highlight
 .
-requestAnimationFrame
-(
-(
-)
-=
->
-{
-requestAnimationFrame
+runAfterLayoutAndPaint
 (
 (
 )
@@ -243,7 +270,15 @@ highlight
 "
 )
 ;
-}
+document
+.
+documentElement
+.
+removeAttribute
+(
+"
+class
+"
 )
 ;
 }
@@ -252,4 +287,8 @@ highlight
 <
 /
 script
+>
+<
+/
+html
 >
