--- a/testing/web-platform/tests/css/css-highlight-api/painting/custom-highlight-painting-invalidation-003.html
+++ b/testing/web-platform/tests/css/css-highlight-api/painting/custom-highlight-painting-invalidation-003.html
@@ -4,6 +4,16 @@ DOCTYPE
 html
 >
 <
+html
+class
+=
+"
+reftest
+-
+wait
+"
+>
+<
 meta
 charset
 =
@@ -104,6 +114,30 @@ range
 "
 >
 <
+script
+src
+=
+"
+resources
+/
+run
+-
+after
+-
+layout
+-
+and
+-
+paint
+.
+js
+"
+>
+<
+/
+script
+>
+<
 style
 >
 :
@@ -199,14 +233,7 @@ Highlight
 s
 range
 .
-requestAnimationFrame
-(
-(
-)
-=
->
-{
-requestAnimationFrame
+runAfterLayoutAndPaint
 (
 (
 )
@@ -233,7 +260,15 @@ body
 2
 )
 ;
-}
+document
+.
+documentElement
+.
+removeAttribute
+(
+"
+class
+"
 )
 ;
 }
@@ -242,4 +277,8 @@ body
 <
 /
 script
+>
+<
+/
+html
 >
