--- a/testing/web-platform/tests/css/css-highlight-api/painting/custom-highlight-painting-invalidation-004.html
+++ b/testing/web-platform/tests/css/css-highlight-api/painting/custom-highlight-painting-invalidation-004.html
@@ -4,6 +4,16 @@ DOCTYPE
 html
 >
 <
+html
+class
+=
+"
+reftest
+-
+wait
+"
+>
+<
 meta
 charset
 =
@@ -104,6 +114,30 @@ range
 to
 it
 "
+>
+<
+script
+src
+=
+"
+resources
+/
+run
+-
+after
+-
+layout
+-
+and
+-
+paint
+.
+js
+"
+>
+<
+/
+script
 >
 <
 style
@@ -222,14 +256,7 @@ modifying
 the
 Highlight
 .
-requestAnimationFrame
-(
-(
-)
-=
->
-{
-requestAnimationFrame
+runAfterLayoutAndPaint
 (
 (
 )
@@ -243,7 +270,15 @@ add
 r
 )
 ;
-}
+document
+.
+documentElement
+.
+removeAttribute
+(
+"
+class
+"
 )
 ;
 }
@@ -252,4 +287,8 @@ r
 <
 /
 script
+>
+<
+/
+html
 >
