--- a/testing/web-platform/tests/css/css-highlight-api/painting/custom-highlight-painting-invalidation-005.html
+++ b/testing/web-platform/tests/css/css-highlight-api/painting/custom-highlight-painting-invalidation-005.html
@@ -4,6 +4,16 @@ DOCTYPE
 html
 >
 <
+html
+class
+=
+"
+reftest
+-
+wait
+"
+>
+<
 meta
 charset
 =
@@ -102,6 +112,30 @@ modifying
 its
 priority
 "
+>
+<
+script
+src
+=
+"
+resources
+/
+run
+-
+after
+-
+layout
+-
+and
+-
+paint
+.
+js
+"
+>
+<
+/
+script
 >
 <
 style
@@ -276,14 +310,7 @@ modifying
 the
 Highlight
 .
-requestAnimationFrame
-(
-(
-)
-=
->
-{
-requestAnimationFrame
+runAfterLayoutAndPaint
 (
 (
 )
@@ -296,7 +323,15 @@ priority
 =
 3
 ;
-}
+document
+.
+documentElement
+.
+removeAttribute
+(
+"
+class
+"
 )
 ;
 }
@@ -305,4 +340,8 @@ priority
 <
 /
 script
+>
+<
+/
+html
 >
