--- a/testing/web-platform/tests/css/css-highlight-api/painting/custom-highlight-painting-invalidation-006.html
+++ b/testing/web-platform/tests/css/css-highlight-api/painting/custom-highlight-painting-invalidation-006.html
@@ -4,6 +4,16 @@ DOCTYPE
 html
 >
 <
+html
+class
+=
+"
+reftest
+-
+wait
+"
+>
+<
 meta
 charset
 =
@@ -108,6 +118,30 @@ of
 its
 ranges
 "
+>
+<
+script
+src
+=
+"
+resources
+/
+run
+-
+after
+-
+layout
+-
+and
+-
+paint
+.
+js
+"
+>
+<
+/
+script
 >
 <
 style
@@ -235,14 +269,7 @@ a
 new
 node
 .
-requestAnimationFrame
-(
-(
-)
-=
->
-{
-requestAnimationFrame
+runAfterLayoutAndPaint
 (
 (
 )
@@ -263,7 +290,15 @@ body
 firstChild
 )
 ;
-}
+document
+.
+documentElement
+.
+removeAttribute
+(
+"
+class
+"
 )
 ;
 }
@@ -272,4 +307,8 @@ firstChild
 <
 /
 script
+>
+<
+/
+html
 >
