--- a/testing/web-platform/tests/css/css-highlight-api/painting/custom-highlight-painting-staticrange-004.html
+++ b/testing/web-platform/tests/css/css-highlight-api/painting/custom-highlight-painting-staticrange-004.html
@@ -4,6 +4,16 @@ DOCTYPE
 html
 >
 <
+html
+class
+=
+"
+reftest
+-
+wait
+"
+>
+<
 meta
 charset
 =
@@ -114,6 +124,30 @@ painted
 anymore
 )
 "
+>
+<
+script
+src
+=
+"
+resources
+/
+run
+-
+after
+-
+layout
+-
+and
+-
+paint
+.
+js
+"
+>
+<
+/
+script
 >
 <
 style
@@ -267,14 +301,7 @@ targetSpan
 s
 id
 .
-requestAnimationFrame
-(
-(
-)
-=
->
-{
-requestAnimationFrame
+runAfterLayoutAndPaint
 (
 (
 )
@@ -289,7 +316,15 @@ id
 contained
 "
 ;
-}
+document
+.
+documentElement
+.
+removeAttribute
+(
+"
+class
+"
 )
 ;
 }
@@ -298,4 +333,8 @@ contained
 <
 /
 script
+>
+<
+/
+html
 >
