--- a/testing/web-platform/tests/css/css-highlight-api/painting/custom-highlight-painting-staticrange-007.html
+++ b/testing/web-platform/tests/css/css-highlight-api/painting/custom-highlight-painting-staticrange-007.html
@@ -4,6 +4,16 @@ DOCTYPE
 html
 >
 <
+html
+class
+=
+"
+reftest
+-
+wait
+"
+>
+<
 meta
 charset
 =
@@ -119,6 +129,30 @@ painted
 now
 )
 "
+>
+<
+script
+src
+=
+"
+resources
+/
+run
+-
+after
+-
+layout
+-
+and
+-
+paint
+.
+js
+"
+>
+<
+/
+script
 >
 <
 style
@@ -280,14 +314,7 @@ the
 style
 sheet
 .
-requestAnimationFrame
-(
-(
-)
-=
->
-{
-requestAnimationFrame
+runAfterLayoutAndPaint
 (
 (
 )
@@ -304,7 +331,15 @@ target
 }
 )
 ;
-}
+document
+.
+documentElement
+.
+removeAttribute
+(
+"
+class
+"
 )
 ;
 }
@@ -313,4 +348,8 @@ target
 <
 /
 script
+>
+<
+/
+html
 >
