Bug 1725319 [wpt PR 30006] - Update show() test to match WebKit's behavior, a=testonly
Automatic update from web-platform-tests
Update PR.show() test to match WebKit's behavior (#30006)

--

wpt-commits: 661016a13f10f7e3566cf000718571ff815825eb
wpt-pr: 30006

UltraBlame original commit: 2c2887ab96302250b54821a9e8304f9ce4b431ac

--- a/testing/web-platform/tests/payment-request/show-consume-activation.https.html
+++ b/testing/web-platform/tests/payment-request/show-consume-activation.https.html
@@ -275,7 +275,7 @@ promise_rejects_dom
 (
 t
 "
-NotAllowedError
+SecurityError
 "
 pr
 .
@@ -343,7 +343,7 @@ promise_rejects_dom
 (
 t
 "
-NotAllowedError
+InvalidStateError
 "
 pr
 .
