Bug 1725522 [wpt PR 30017] - Fix several var() tests, a=testonly
Automatic update from web-platform-tests
Fix several var() tests (#30017)

--

wpt-commits: dfd2e8569778e2a8409d47b529bd062f7ce862b5
wpt-pr: 30017

UltraBlame original commit: 7d74f1991037daf3c7374bfb25ac88162e7d162f

--- a/testing/web-platform/tests/css/css-variables/css-vars-custom-property-case-sensitive-001.html
+++ b/testing/web-platform/tests/css/css-variables/css-vars-custom-property-case-sensitive-001.html
@@ -124,23 +124,22 @@ match
 href
 =
 "
-reference
 /
 css
--
-vars
--
-custom
--
-property
--
-case
--
-sensitive
--
+/
+reference
+/
 ref
+-
+filled
+-
+green
+-
+100px
+-
+square
 .
-html
+xht
 "
 >
 <
@@ -158,123 +157,38 @@ root
 {
 -
 -
-veryblue
+lowercasegreen
 :
-#
-22e
+green
 ;
 -
 -
-AlsoBlue
+MixedCaseGreen
 :
-#
-22e
+green
 ;
 -
 -
-veryred
+lowercasered
 :
-#
-f00
-;
--
--
-AlsoRed
-:
-#
-f00
-;
-}
-/
-*
-These
-match
-the
-case
-of
-the
-declarations
-*
-/
-.
-blue
--
-good
--
-1
-{
-color
-:
-var
-(
--
--
-veryblue
-)
-;
-}
-.
-blue
--
-good
--
-2
-{
-color
-:
-var
-(
--
--
-AlsoBlue
-)
-;
-}
-/
-*
-These
-DO
-NOT
-match
-the
-case
-of
-the
-declarations
-*
-/
-.
 red
+;
 -
-bad
 -
-1
-{
-color
+MixedCaseRed
 :
-var
-(
--
--
-VeryRed
-)
+red
 ;
 }
-.
-red
--
-bad
--
-2
+div
 {
-color
+width
 :
-var
-(
--
--
-alsored
-)
+100px
+;
+height
+:
+25px
 ;
 }
 <
@@ -289,173 +203,123 @@ head
 body
 >
 <
-h2
-class
-=
-"
-blue
--
-good
--
-1
-"
->
-Valid
-CSS
-Variable
-Names
-<
-/
-h2
->
-<
-p
-class
-=
-"
-blue
--
-good
--
-1
-"
->
-This
-paragraph
-is
-styled
-using
-a
-valid
-CSS
-Variable
-name
-.
-It
-should
-be
-blue
-.
-<
-/
 p
 >
-<
-p
-class
-=
-"
-blue
--
-good
--
-2
-"
->
-This
-paragraph
-is
-styled
-using
-a
-valid
-CSS
-Variable
-name
-.
-It
-should
-be
-blue
-.
-<
-/
-p
->
-<
-br
->
-<
-h2
-class
-=
-"
-red
--
-bad
--
-1
-"
->
-Invalid
-CSS
-Variable
-Names
-<
-/
-h2
->
-<
-p
-class
-=
-"
-red
--
-bad
--
-1
-"
->
-This
-paragraph
-is
-styled
-using
-an
-invalid
-CSS
-Variable
-name
-.
-Fail
+Test
+passes
 if
+there
+is
+a
+filled
+green
+square
+and
+<
+strong
+>
+no
 red
+<
+/
+strong
+>
 .
 <
 /
 p
 >
 <
-p
-class
+div
+style
 =
 "
+background
+-
+color
+:
+var
+(
+-
+-
+lowercasegreen
 red
--
-bad
--
-2
+)
+;
 "
 >
-This
-paragraph
-is
-styled
-using
-an
-invalid
-CSS
-Variable
-name
-.
-Fail
-if
-red
-.
 <
 /
-p
+div
+>
+<
+div
+style
+=
+"
+background
+-
+color
+:
+var
+(
+-
+-
+MixedCaseGreen
+red
+)
+;
+"
+>
+<
+/
+div
+>
+<
+div
+style
+=
+"
+background
+-
+color
+:
+var
+(
+-
+-
+LowerCaseRed
+green
+)
+;
+"
+>
+<
+/
+div
+>
+<
+div
+style
+=
+"
+background
+-
+color
+:
+var
+(
+-
+-
+mixedcasered
+green
+)
+;
+"
+>
+<
+/
+div
 >
 <
 /
