--- a/testing/web-platform/tests/css/css-variables/css-vars-custom-property-inheritance.html
+++ b/testing/web-platform/tests/css/css-variables/css-vars-custom-property-inheritance.html
@@ -129,21 +129,22 @@ match
 href
 =
 "
-reference
 /
 css
--
-vars
--
-custom
--
-property
--
-inheritance
--
+/
+reference
+/
 ref
+-
+filled
+-
+green
+-
+100px
+-
+square
 .
-html
+xht
 "
 >
 <
@@ -169,9 +170,10 @@ root
 -
 -
 color
+-
+1
 :
-#
-1c1
+green
 !
 important
 ;
@@ -182,33 +184,18 @@ root
 -
 -
 color
+-
+1
 :
 red
 ;
 }
-/
-*
-test
-cascade
-order
-*
-/
-*
+div
+.
+color1
 {
-color
-:
-red
-;
-}
-/
-*
-test
-cascade
-order
-*
-/
-*
-{
+background
+-
 color
 :
 var
@@ -216,7 +203,68 @@ var
 -
 -
 color
+-
+1
 )
+;
+}
+/
+*
+test
+cascade
+order
+*
+/
+:
+root
+{
+-
+-
+color
+-
+2
+:
+green
+;
+}
+div
+.
+color2
+{
+background
+-
+color
+:
+red
+;
+}
+div
+.
+color2
+{
+background
+-
+color
+:
+var
+(
+-
+-
+color
+-
+2
+)
+;
+}
+div
+{
+width
+:
+100px
+;
+height
+:
+50px
 ;
 }
 <
@@ -233,48 +281,49 @@ body
 <
 p
 >
-Green
-<
-/
-p
->
-<
-p
->
-Green
-<
-/
-p
->
-<
-p
->
-Green
-<
-/
-p
->
-<
-p
->
-The
-test
+Test
 passes
 if
-everything
+there
 is
+a
+filled
 green
-.
-Any
+square
+and
+<
+strong
+>
+no
 red
-means
-the
-test
-failed
+<
+/
+strong
+>
 .
 <
 /
 p
+>
+<
+div
+class
+=
+color1
+>
+<
+/
+div
+>
+<
+div
+class
+=
+color2
+>
+<
+/
+div
 >
 <
 /
