--- a/testing/web-platform/tests/css/css-variables/variable-declaration-24.html
+++ b/testing/web-platform/tests/css/css-variables/variable-declaration-24.html
@@ -161,7 +161,7 @@ orange
 -
 a
 :
-green
+red
 ;
 -
 -
@@ -184,6 +184,13 @@ b
 -
 -
 ;
+/
+*
+valid
+at
+parse
+*
+/
 color
 :
 var
@@ -193,6 +200,14 @@ var
 a
 )
 ;
+/
+*
+but
+IACVT
+at
+substitution
+*
+/
 }
 <
 /
