--- a/testing/web-platform/tests/css/css-variables/variable-declaration-25.html
+++ b/testing/web-platform/tests/css/css-variables/variable-declaration-25.html
@@ -161,7 +161,7 @@ orange
 -
 a
 :
-green
+red
 ;
 -
 -
@@ -183,6 +183,13 @@ var
 b
 )
 ;
+/
+*
+valid
+at
+parse
+*
+/
 color
 :
 var
@@ -192,6 +199,14 @@ var
 a
 )
 ;
+/
+*
+but
+IACVT
+at
+substitution
+*
+/
 }
 <
 /
