--- a/testing/web-platform/tests/css/css-variables/variable-pseudo-element.html
+++ b/testing/web-platform/tests/css/css-variables/variable-pseudo-element.html
@@ -12,13 +12,17 @@ head
 <
 title
 >
-Parse
-store
-and
-serialize
-CSS
-variable
-references
+Variables
+work
+in
+:
+:
+before
+/
+:
+:
+after
+pseudos
 <
 /
 title
@@ -78,22 +82,34 @@ com
 /
 >
 <
-!
+link
+rel
+=
+"
+author
+"
+title
+=
+"
+Tab
+Atkins
 -
--
-This
-is
-not
-directly
-specified
-in
-the
-spec
-but
-should
-work
--
--
+Bittner
+"
+href
+=
+"
+https
+:
+/
+/
+xanthir
+.
+com
+/
+contact
+/
+"
 >
 <
 link
@@ -164,90 +180,56 @@ js
 script
 >
 <
-!
--
--
-https
-:
-/
-/
-drafts
-.
-csswg
-.
-org
-/
-css
--
-syntax
-/
-#
-error
--
-handling
-If
-the
-stylesheet
-ends
-while
-any
-rule
-declaration
-function
-string
-etc
-.
-are
-still
-open
-everything
-is
-automatically
-closed
-.
--
--
->
-<
 style
-id
-=
-"
-variable
--
-reference
--
-left
--
-open
-"
 >
-div
+:
+root
 {
-color
-:
-var
-(
 -
--
-my
--
-color
-)
-;
--
--
-my
 -
 color
 :
-blue
+green
 ;
 -
--
-my
 -
 color2
+:
+red
+;
+}
+div
+:
+:
+before
+{
+content
+:
+'
+[
+before
+]
+'
+;
+}
+div
+:
+:
+after
+{
+content
+:
+'
+[
+after
+]
+'
+;
+}
+#
+div1
+{
+color
 :
 red
 ;
@@ -256,151 +238,40 @@ red
 div1
 :
 :
-after
-{
-content
-:
-'
-[
-after
-]
-'
-;
-color
-:
-var
-(
--
--
-my
--
-color
-)
-;
--
--
-my
--
-color
-:
-orange
-;
-}
-#
-div2
-:
-:
-after
-{
-content
-:
-'
-[
-after
-]
-'
-;
-color
-:
-var
-(
--
--
-my
--
-color2
-)
-;
-}
-#
-div3
-:
-:
-after
-{
-content
-:
-'
-[
-after
-]
-'
-;
--
--
-my
--
-color
-:
-orange
-;
-}
-#
-div4
-:
-:
-after
-{
-content
-:
-'
-[
-after
-]
-'
-;
-color
-:
-var
-(
--
--
-my
--
-color
-)
-;
--
--
-my
--
-color
-:
-pink
-;
-}
+before
 #
 div1
 :
 :
-before
+after
 {
-content
-:
-'
-[
-before
-]
-'
-;
 color
 :
 var
 (
 -
 -
-my
--
-color
+color2
 )
 ;
 -
 -
-my
--
+color2
+:
+green
+;
+}
+#
+div2
+{
 color
 :
-orange
+var
+(
+-
+-
+color2
+)
 ;
 }
 #
@@ -408,24 +279,32 @@ div2
 :
 :
 before
-{
-content
+#
+div2
 :
-'
-[
-before
-]
-'
-;
+:
+after
+{
 color
 :
 var
 (
 -
 -
-my
+color
+)
+;
+}
+#
+div3
+{
+color
+:
+var
+(
 -
-color2
+-
+color
 )
 ;
 }
@@ -434,56 +313,17 @@ div3
 :
 :
 before
-{
-content
-:
-'
-[
-before
-]
-'
-;
--
--
-my
--
-color
-:
-orange
-;
-}
 #
-div4
+div3
 :
 :
-before
+after
 {
-content
-:
-'
-[
-before
-]
-'
-;
-color
-:
-var
-(
 -
--
-my
--
-color
-)
-;
--
--
-my
 -
 color
 :
-purple
+red
 ;
 }
 <
@@ -491,13 +331,6 @@ purple
 style
 >
 <
-/
-head
->
-<
-body
->
-<
 div
 id
 =
@@ -537,154 +370,52 @@ div3
 div
 >
 <
-div
+span
 id
 =
 "
-div4
+control
+"
+style
+=
+"
+color
+:
+green
+;
 "
 >
-div4
 <
 /
-div
+span
 >
 <
 script
-type
-=
-"
-text
-/
-javascript
-"
 >
 "
 use
 strict
 "
 ;
-var
-testcases
-=
 [
-{
-ID
-:
-"
-div1
-"
-expectedAfterColor
-:
-"
-rgb
+.
+.
+.
+document
+.
+querySelectorAll
 (
-255
-165
-0
+"
+div
+"
 )
-"
-expectedBeforeColor
-:
-"
-rgb
-(
-255
-165
-0
-)
-"
-}
-{
-ID
-:
-"
-div2
-"
-expectedAfterColor
-:
-"
-rgb
-(
-255
-0
-0
-)
-"
-expectedBeforeColor
-:
-"
-rgb
-(
-255
-0
-0
-)
-"
-}
-{
-ID
-:
-"
-div3
-"
-expectedAfterColor
-:
-"
-rgb
-(
-0
-0
-255
-)
-"
-expectedBeforeColor
-:
-"
-rgb
-(
-0
-0
-255
-)
-"
-}
-{
-ID
-:
-"
-div4
-"
-expectedAfterColor
-:
-"
-rgb
-(
-255
-192
-203
-)
-"
-expectedBeforeColor
-:
-"
-rgb
-(
-128
-0
-128
-)
-"
-}
 ]
-;
-testcases
 .
 forEach
 (
 function
 (
-testcase
+div
 )
 {
 test
@@ -693,16 +424,43 @@ function
 (
 )
 {
-var
-div
+const
+expectedColor
 =
+getComputedStyle
+(
 document
 .
-getElementById
+querySelector
 (
-testcase
+"
+#
+control
+"
+)
+)
 .
-ID
+color
+;
+var
+actualBeforeColor
+=
+window
+.
+getComputedStyle
+(
+div
+'
+:
+before
+'
+)
+.
+getPropertyValue
+(
+'
+color
+'
 )
 ;
 var
@@ -726,75 +484,27 @@ color
 '
 )
 ;
-var
-actualBeforeColor
-=
-window
-.
-getComputedStyle
-(
-div
-'
-:
-before
-'
-)
-.
-getPropertyValue
-(
-'
-color
-'
-)
-;
 assert_equals
 (
 actualBeforeColor
-testcase
-.
-expectedBeforeColor
-"
-The
-color
-of
-the
-before
-pseudo
-element
-should
-match
-the
-expected
-color
-"
+expectedColor
 )
 ;
 assert_equals
 (
 actualAfterColor
-testcase
-.
-expectedAfterColor
-"
-The
-color
-of
-the
-after
-pseudo
-element
-should
-match
-the
-expected
-color
-"
+expectedColor
 )
 ;
 }
-testcase
+div
 .
-ID
+getAttribute
+(
+"
+id
+"
+)
 )
 ;
 }
