--- a/testing/web-platform/tests/payment-request/payment-request-show-method.https.html
+++ b/testing/web-platform/tests/payment-request/payment-request-show-method.https.html
@@ -356,7 +356,7 @@ promise_rejects_dom
 (
 t
 "
-NotAllowedError
+SecurityError
 "
 acceptPromise
 )
@@ -449,7 +449,7 @@ promise_rejects_dom
 (
 t
 "
-NotAllowedError
+SecurityError
 "
 request
 .
@@ -602,7 +602,7 @@ promise_rejects_dom
 (
 t
 "
-NotAllowedError
+SecurityError
 "
 request2
 .
