Bug 1692609 - Update tests for a higher-precision RFP r=jgilbert
Depends on D122045

Differential Revision: https://phabricator.services.mozilla.com/D122046

UltraBlame original commit: ce4b4f786c4d5d90da86ebaacd8e445be50d2ee2

--- a/dom/media/test/test_video_stats_resistfingerprinting.html
+++ b/dom/media/test/test_video_stats_resistfingerprinting.html
@@ -314,18 +314,6 @@ resistFingerprinting
 .
 reduceTimerPrecision
 .
-microseconds
-"
-100000
-]
-[
-"
-privacy
-.
-resistFingerprinting
-.
-reduceTimerPrecision
-.
 jitter
 "
 false
@@ -493,8 +481,26 @@ the
 current
 time
 to
-100ms
+the
+RFP
+time
+-
+atom
 .
+const
+RFP_TIME_ATOM_MS
+=
+16
+.
+667
+;
+const
+timeAtomSecs
+=
+RFP_TIME_ATOM_MS
+/
+1000
+;
 let
 currentTime
 =
@@ -505,11 +511,11 @@ floor
 v
 .
 currentTime
-*
-10
-)
 /
-10
+timeAtomSecs
+)
+*
+timeAtomSecs
 ;
 let
 dropRate
