Backed out 2 changesets (bug 1692609) for causing failures at test_getUserMedia_addTrackRemoveTrack. CLOSED TREE
Backed out changeset ce4b4f786c4d (bug 1692609)
Backed out changeset d36f5f4ece1e (bug 1692609)

UltraBlame original commit: 36974366b0fbc17ac7e2ee7e6a39ce6cead207fa

--- a/dom/media/test/test_video_stats_resistfingerprinting.html
+++ b/dom/media/test/test_video_stats_resistfingerprinting.html
@@ -314,6 +314,18 @@ resistFingerprinting
 .
 reduceTimerPrecision
 .
+microseconds
+"
+100000
+]
+[
+"
+privacy
+.
+resistFingerprinting
+.
+reduceTimerPrecision
+.
 jitter
 "
 false
@@ -481,26 +493,8 @@ the
 current
 time
 to
-the
-RFP
-time
--
-atom
+100ms
 .
-const
-RFP_TIME_ATOM_MS
-=
-16
-.
-667
-;
-const
-timeAtomSecs
-=
-RFP_TIME_ATOM_MS
-/
-1000
-;
 let
 currentTime
 =
@@ -511,11 +505,11 @@ floor
 v
 .
 currentTime
-/
-timeAtomSecs
-)
 *
-timeAtomSecs
+10
+)
+/
+10
 ;
 let
 dropRate
