--- a/devtools/client/aboutdebugging/test/browser/resources/service-workers/push-sw.html
+++ b/devtools/client/aboutdebugging/test/browser/resources/service-workers/push-sw.html
@@ -289,6 +289,70 @@ unsubscribe
 ;
 /
 /
+Expose
+a
+promise
+to
+wait
+until
+the
+service
+worker
+is
+claimed
+.
+window
+.
+onSwClaimed
+=
+new
+Promise
+(
+resolve
+=
+>
+{
+navigator
+.
+serviceWorker
+.
+addEventListener
+(
+"
+message
+"
+function
+(
+event
+)
+{
+if
+(
+event
+.
+data
+=
+=
+"
+sw
+-
+claimed
+"
+)
+{
+resolve
+(
+)
+;
+}
+}
+)
+;
+}
+)
+;
+/
+/
 Register
 the
 service
